--- a/ruoyi-gateway/src/main/resources/bootstrap.yml
+++ b/ruoyi-gateway/src/main/resources/bootstrap.yml
@@ -3,13 +3,13 @@ server:
   port: 8080
 
 # Spring
-spring: 
+spring:
+  config:
+    activate:
+      on-profile: dev
   application:
     # 应用名称
     name: ruoyi-gateway
-  profiles:
-    # 环境配置
-    active: dev
   cloud:
     nacos:
       discovery:
@@ -22,7 +22,49 @@ spring:
         file-extension: yml
         # 共享配置
         shared-configs:
-          - application-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
+          - application-dev.${spring.cloud.nacos.config.file-extension}
+    sentinel:
+      # 取消控制台懒加载
+      eager: true
+      transport:
+        # 控制台地址
+        dashboard: ${RUOYI_NACOS_SERVER:127.0.0.1}:8718
+      # nacos配置持久化
+      datasource:
+        ds1:
+          nacos:
+            server-addr: ${RUOYI_NACOS_SERVER:127.0.0.1}:8848
+            dataId: sentinel-ruoyi-gateway
+            groupId: DEFAULT_GROUP
+            data-type: json
+            rule-type: gw-flow
+
+---
+# Tomcat
+server:
+  port: 8080
+
+# Spring
+spring:
+  config:
+    activate:
+      on-profile: docker
+  application:
+    # 应用名称
+    name: ruoyi-gateway
+  cloud:
+    nacos:
+      discovery:
+        # 服务注册地址
+        server-addr: ${RUOYI_NACOS_SERVER:127.0.0.1}:8848
+      config:
+        # 配置中心地址
+        server-addr: ${RUOYI_NACOS_SERVER:127.0.0.1}:8848
+        # 配置文件格式
+        file-extension: yml
+        # 共享配置
+        shared-configs:
+          - application-docker.${spring.cloud.nacos.config.file-extension}
     sentinel:
       # 取消控制台懒加载
       eager: true
