--- a/ruoyi-modules/ruoyi-job/src/main/resources/bootstrap.yml
+++ b/ruoyi-modules/ruoyi-job/src/main/resources/bootstrap.yml
@@ -3,13 +3,13 @@ server:
   port: 9203
 
 # Spring
-spring: 
+spring:
+  config:
+    activate:
+      on-profile: dev
   application:
     # 应用名称
     name: ruoyi-job
-  profiles:
-    # 环境配置
-    active: dev
   cloud:
     nacos:
       discovery:
@@ -22,4 +22,31 @@ spring:
         file-extension: yml
         # 共享配置
         shared-configs:
-          - application-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
+          - application-dev.${spring.cloud.nacos.config.file-extension}
+
+---
+# Tomcat
+server:
+  port: 9203
+
+# Spring
+spring:
+  config:
+    activate:
+      on-profile: docker
+  application:
+    # 应用名称
+    name: ruoyi-job
+  cloud:
+    nacos:
+      discovery:
+        # 服务注册地址
+        server-addr: ${RUOYI_NACOS_SERVER:127.0.0.1}:8848
+      config:
+        # 配置中心地址
+        server-addr: ${RUOYI_NACOS_SERVER:127.0.0.1}:8848
+        # 配置文件格式
+        file-extension: yml
+        # 共享配置
+        shared-configs:
+          - application-docker.${spring.cloud.nacos.config.file-extension}
